--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Number Guesser</h1>
+        <div id="game">
+            <p>Guess a number between <span class="min-num">1</span> and <span class="max-num">10</span></p>
+            <input type="number" id="guess-input" placeholder="Enter your guess">
+            <input type="submit" value="Submit" id="guess-value">
+            <p class="message"></p>
+        </div>
+    </div>
 </body>
 </html>
