Link to app.js from the index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Guesser</title>
     <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+    <script src="app.js" defer></script>
 </head>
 <body>
     <div class="container">
